--- a/index copy.css
+++ b/index copy.css
@@ -1,103 +1,101 @@
-*{
+/* 전체 요소 모두 선택 */
+* {
   margin: 0px;
-  padding: 0px;
+  padding: 0px; 
 }
 
-body{
+body {
   display: flex;
   justify-content: center;
   align-items: start;
 }
 
-main{
-  width: 80%;
+main {
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
 
-header{
-  display: flex;
-  background-color: black;
-  color: white;
-  justify-content: space-between;
-  align-items: center;
+header {
   width: 100%;
   height: 40px;
-  padding: 20px;
-
+  background-color: black;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px; 
 }
 
-a{
-
+a {
+  text-decoration: none;
+  color: white;
+  display: inline-flex;
   padding: 10px;
   border-radius: 10px;
-  color: white;
-  text-decoration: none;
-  display: inline-flex;
-
 }
 
-a:hover{
- background-color: white;
- color: black;
+a:hover {
+  background-color: white;
+  color: black;
 }
 
-
-section, #divTitle, #divContent{
+section, #divTitle, #divContent {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-section{
-  width: 100%;
-  flex-direction: column; 
-  /* background-color: aliceblue; */
+section {
+  width: 100%; 
+  flex-direction: column;
 }
-#divTitle, #divContent, #msg{
+
+#divTitle, #divContent, #msg {
   border: 1px dotted gray;
-  width: 90%;
-  margin: 20px;
+  width : 90%;
   padding: 20px;
 }
 
-#divTitle{
+#divTitle {
   background-color: aliceblue;
-
+  border: 1px dotted gray;
   font-size: x-large;
   font-weight: bold;
   height: 60px;
-  margin: 20px
+  margin: 20px;
 }
 
-#divContent{
+#divContent {
   flex-direction: column;
   margin-top: 10px;
-  /* padding: 20px; */
 }
+
 #divContent > p {
   margin-bottom: 10px;
 }
 
-#msg{
-  heigth: 60px;
+#msg { 
+  height: 60px;
 }
 
-button{
-  display: inline-flex;
+button {
+  display: inline-flex ;
   justify-content: center;
   align-items: center;
-
-  padding:10px;
+  
+  padding: 10px;
   background-color: royalblue;
-  color:white;
-  border-radius: 10px;
-  border:none;
+  color: white;
 
+  font-size:medium;
+  font-weight: bold;
+  border-radius: 10px;
+  border: none;
 }
 
-button:hover{
-  background-color: coral;
+button:hover {
+  background-color: coral;  
 }
