--- a/02/02 copy.css
+++ b/02/02 copy.css
@@ -1,113 +1,102 @@
-/* header {
-    background-color: lightblue;
-    color:aquamarine;
-} */
- /* 전체 요소 모두 선택 */
-*{
-    /* background-color: beige; */
-    margin:0cap;
-    padding:0cap;
-
+/* 전체 요소 모두 선택 */
+* {
+  margin: 0px;
+  padding: 0px; 
 }
 
-h2{
-    color: blue;
+/* 태그 selector */
+header {
+  background-color: aliceblue;
 }
 
-/* 클래스 selecotr: .사용*/
+h2 {
+  color: blue;
+}
+
+/* 클래스 selector */
 .c2 {
-    background-color: beige;
-}
-.c1 {
-    background-color: skyblue;
-}
-/* id selector :  #사용, 아이디가 클래스 우선, 우선순위: tag < class < id  */
-#d1 {
-    background-color: lightpink;
+  background-color:lavender;
 }
 
+/* 아이디 selector, 부모자식 관계 */
 #d1 > h2 {
-    color: greenyellow;
+  color:green;
 }
 
-/* header > ul > li{
-    color:aqua
+/* header > ul > li {
+  color:green;
 } */
 
 /* 자손관계 selector */
 header li {
-    color:red;
-    list-style: none;
-    margin: 5px;
+  color:green;
+  list-style: none;
+  margin: 5px;
 }
 img {
-    border-radius: 50%;
-}
-/* 속성 selector,그룹화 */
-img[alt=html],[alt=css] {
-    width: 100px;
-    height: 100px;  
+  border-radius: 25%;
 }
 
-/* img[alt]{
-    width:100px;
-    height: 100px;
+/* 속성 selector, 그룹화 */
+img[alt=html], img[alt=js]  {
+  width: 100px;
+  height: 100px;
+}
+/* 
+img[alt=js]  {
+  width: 100px;
+  height: 100px;
 } */
 
 a {
-    text-decoration: none;
-    color: black;
-    display: inline-flex;
-    padding:5px
-
+  text-decoration: none;
+  color: black;
+  display: inline-flex;
+  padding: 5px;
 }
-/* 마우스가 올라가면 , 가상클래스 seletor*/
-a:hover{
-    color:white;
-    background-color: cadetblue;
+/* 가상클래스 selector */
+a:hover {
+  color:white;
+  background-color: coral;
 }
 
 /* 박스모델 */
-
-article{
-    border: 10px dashed red;
-    /* 바깥여백, 4개의 값 제공 방향*/
-    margin: 10px 20px 30px 40px;
-    /* 안쪽여백 */
-    padding: 20px;
+article {
+  border: 5px dashed red;
+  margin: 10px 20px 30px 40px;
+  padding: 20px 40px;
 }
 
-div, ul {
-    border: 2px solid green;
-    margin: 10px;
-    padding: 30px;
-    display: flex;
+header {
+  display: flex;
+  justify-content:space-between;
+  align-items: start;
+  /* flex-direction: column; */
+  padding: 10px;
+  height: 200px;
 }
 
-
-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    height: 300px;
+div , ul {
+  border: 2px solid green;
+  margin: 10px;
+  padding: 20px;
+  display: flex;
 }
 
-@media screen and (min-width: 1024px){
-    body {
-        background-color: aquamarine;
-    }
-    header{
-        background-color: blanchedalmond;
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-@media screen and (max-width: 300px){
+/* 미디어쿼리 */
+@media screen and (min-width: 1024px) {
+  body {
+    background-color: lightgreen;
+  }
   
-    header{
-        display: flex;
-        flex-direction: column;
-    }
+  header {
+    background-color: chartreuse;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  header {
+    display: flex;
+    flex-direction: column;
+  }
 }
