--- a/index.css
+++ b/index.css
@@ -8,9 +8,8 @@ body{
   justify-content: center;
   align-items: start;
 }
-
 main{
-  width: 80%;
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -26,31 +25,30 @@ header{
   width: 100%;
   height: 40px;
   padding: 20px;
-
+}
+ul a {
+  color:black;
+  background-color: white;  
 }
 
 a{
-
   padding: 10px;
   border-radius: 10px;
-  color: white;
+  color:white;
   text-decoration: none;
   display: inline-flex;
-
 }
 
 a:hover{
  background-color: white;
- color: black;
+ color: palevioletred;
 }
-
 
 section, #divTitle, #divContent{
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 section{
   width: 100%;
   flex-direction: column; 
@@ -59,19 +57,15 @@ section{
 #divTitle, #divContent, #msg{
   border: 1px dotted gray;
   width: 90%;
-  margin: 20px;
   padding: 20px;
 }
-
 #divTitle{
   background-color: aliceblue;
-
   font-size: x-large;
   font-weight: bold;
   height: 60px;
   margin: 20px
 }
-
 #divContent{
   flex-direction: column;
   margin-top: 10px;
@@ -80,24 +74,22 @@ section{
 #divContent > p {
   margin-bottom: 10px;
 }
-
 #msg{
-  heigth: 60px;
+  height: 60px;
 }
-
 button{
   display: inline-flex;
   justify-content: center;
   align-items: center;
-
   padding:10px;
-  background-color: royalblue;
+  background-color: pink;
   color:white;
+
   border-radius: 10px;
   border:none;
-
+  font-size: medium;
+  font-weight: bold;
 }
-
 button:hover{
-  background-color: coral;
+  background-color:lightseagreen;
 }
